@@ -9,6 +9,7 @@ CHANGELOG
 **BUG fixes**
 
 * Signage forms are now restricted by structure (fixes #917)
+* Fix geometries computation when path split occurs on return topology (fixes #899)
 
 0.21 (2013-11-28)
 -----------------
